flux/platform/configuration/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik-system
