flux/platform/configuration/configuration-authentik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik-system
spec:
  parentRefs:
    - name: ext-gateway
      namespace: gateway-api-system
      sectionName: https
  hostnames:
    - "saj.sh"
  rules:
    - matches:
        - path:
            type: Exact
            value: /auth
        - path:
            type: PathPrefix
            value: /auth/
      backendRefs:
        - name: authentik-server
          port: 80
