flux/platform/configuration/configuration-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authentik-vs-external
  namespace: authentik-system
spec:
  hosts:
    - eu.thekalibratecloud.com
  gateways:
    - aks-istio-ingress/thekalibratecloud-com-gateway-external
  http:
    - match:
        - uri:
            exact: /int/connect/ui
        - uri:
            prefix: /int/connect/ui/
      rewrite:
        uri: /
      route:
        - destination:
            host: int-connect-ui-reskin.int-connect.svc.cluster.local
            port:
              number: 80
